--- a/index.html
+++ b/index.html
@@ -1,97 +1,345 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta charset="utf-8">
 <title>森の工房 [Forest Studio] - お問い合わせ</title>
-<style type="text/css">
+<meta name="viewport" content="width=device-width">
 
+<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+<style>
+
+body{
+	font-family: 'メイリオ','Hiragino Kaku Gothic Pro',sans-serif;
+	background-color: #e5e5e5;
+	margin: 0
+}
 a	{color: #017acd}
 
 /* コンテナ */
-div#container	{width: 760px;
+div#container	{width: 900px;
 	margin-left: auto;
-	margin-right: auto}
+	margin-right: auto;
+    background-color: #ffffff;
+    padding: 0 40px;
+    -webkit-box-shadow: 0px 0px 50px #bbbbbb;
+    box-shadow: 0px 0px 50px #bbbbbb;
+    background-image:  url(circle.png),
+                       url(circle-yellow.png),
+                       url(cicle-sky.png),
+                       url(cicle-pink.png),
+                       url(cicle-red.png);
+    background-repeat: no-repeat;
+    background-position: 15px 420px,
+                         90px 500px,
+                         150px 545px,
+                         260px 526px,
+                         10px 532px;
+    background-size:  94px 94px,
+                      30px 30px
+                      50px 50px
+                      35px 35px
+                      25px 25px;
+                      position: relative;
+                      overflow: hidden}
 
 /* ヘッダー */
-div#header	{background-color: #017acd;
-	background-image: url(sky.jpg);
-	padding: 28px 20px 98px}
+header#pageheader	{background: none;
+	                 padding: 15px 0 0;
+}
 
-div#header h1	{margin: 0}
+header#pageheader h1	{margin: 0;
+                         float: left;
+                         font-size: 48px;
+                         font-weight: normal;
+                         font-family: 'Righteous', cursive;}
 
-div#header p	{color: #ffffff;
+header#pageheader h2	{color: #666666;
 	font-size: 0.75em;
-	margin: 0}
+	margin: 0;
+    padding-top: 20px;
+    text-align: right;
+    font-weight:normal;}
 
 /* メニュー */
-ul#menu	{font-size: 0.75em;
+nav{
+	clear: both;
+}
+nav ul	{font-size: 0.75em;
 	margin-top: 0;
-	margin-bottom: 30px;
+	margin-bottom: 18px;
 	margin-left: 0;
 	padding-left: 0;
 	height: 30px;
-	background-color: #005087}
+	background-color: #333333;
+    border-radius: 5px;
+    background: linear-gradient(#777777 0%, #444444 50%, #333333 51%, #555555 100%);
+}
 
-ul#menu li	{list-style-type: none;
+nav li	{list-style-type: none;
 	float: left}
 
-ul#menu li a	{display: block;
+nav ul li a{
+	display: block;
 	width: 120px;
 	line-height: 30px;
 	text-decoration: none;
 	text-align: center;
 	color: #ffffff;
-	background-color: #005087;
-	border-right: solid 1px #ffffff}
+	border-right: solid 1px rgba(255,255,255,0.2);
+	-webkit-transition: 1s;
+	background-color: rgba(1,122,205,0);
+}
 
-ul#menu li a:hover	{background-color: #017acd}
+nav ul li a:hover
+{
+	background-color: rgba(1,122,205,0.3);
+}
+
+nav ul li:first-of-type a:hover{
+border-radius: 5px 0 0 5px;
+}
+
 
 /* コンテンツ */
-div#content	{width: 564px;
+article	{width: auto;
 	margin-left: auto;
 	margin-right: auto}
 
-div#content h2	{background-color: #014471;
-	background-image: url(bar-darkblue.png);
-	background-repeat: no-repeat;
-	font-size: 1em;
-	color: #ffffff;
+article header{
+	border: solid 1px #aaaaaa;
+	margin:29px 0 10px;
+	padding: 18px;
+	border-radius: 5px;
+	box-shadow: 0px 2px 3px #cccccc,
+	            0px 0px 4px 3px #ffffff inset;
+	background-color: rgba(255,255,255,0.5);
+}
+
+article header h1	{background: none;
+	font-size: 28px;
+	color: #000000;
 	line-height: 45px;
-	padding-left: 12px;
-	margin-bottom: 0}
+	padding-left: 0;
+	margin: 0;
+	font-weight: normal;
+    float: left;
+}
 
-div#content h3	{background-color: #ffffff;
-	background-image: url(maru-skyblue.png);
-	background-repeat: no-repeat;
-	background-position: 0px 2px;
-	font-size: 0.875em;
+article header p {
+	font-size: 16px;
+	color:#444444;
+	margin-left: 300px;
+}
+
+article section{
+    clear: both;
+    border: solid 1px #aaaaaa;
+    margin: 20px 0 10px;
+    padding: 18px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: linear-gradient(#ffffff 0%, #dfdfdf 100%);
+    box-shadow: 0 2px 3px #cccccc, 0px 0px 4px 3px #ffffff inset;
+}
+
+article section h1	{
+	background: none;
+	font-size: 24px;
+	font: weight: normal;
 	line-height: 22px;
-	padding-left: 26px;
-	margin-top: 30px;
-	margin-bottom: 0;
-	margin-left: 12px;
-	margin-right: 12px}
+	padding-left: 0;
+	margin-top: 0px;
+	margin-bottom: 20px;
+	margin-left: 0;
+	margin-right: 0}
 
-div#content p	{font-size: 0.75em;
+article p	{font-size: 0.75em;
 	line-height: 1.6;
 	margin-top: 10px;
-	margin-left: 12px;
-	margin-right: 12px}
+	margin-left: 0px;
+	margin-right: 0px}
 
 /* フッター */
-div#footer	{color: #ffffff;
-	background-color: #005087;
+footer	{color: #888888;
 	margin-top: 25px;
 	padding-top: 8px;
-	padding-bottom: 8px}
+	padding-bottom: 8px;
+    clear:both;
+border-top: solid 1px #aaaaaa}
 
-small	{font-size: 0.75em;
+small{font-size: 10px;
 	font-style: normal;
-	text-align: center;
-    display: block;}
+	text-align: left;
+    display: block;
+    }
 
+small::before {content: 'GREEN LEAF';
+display: block;
+width: 200px;
+padding: 10px 0;
+background-color: #880000;
+color: #ffffff;
+font-family: 'Righteous',cursive;
+font-size: 16px;
+text-align: center;
+position: absolute;
+right: 0;
+bottom: 0;
+transform: rotate(-45deg) translate(62px,20px)}
+
+
+/* 画像の配置 */
+figure{
+	margin: 0;
+}
+
+article section:nth-of-type(odd) figure
+	{float: right;
+	margin-left: 15px;
+	margin-bottom: 0px;
+}
+
+article section:nth-of-type(even) figure
+	{float: left;
+	margin-right: 15px;
+	margin-bottom: 0px;
+}
+
+article section figcaption{
+	color: #666666;
+	font-size: 10px;
+	display: block;
+}
+
+article section:nth-of-type(odd) figcaption{
+	text-align: right;
+}
+
+/*フォーム*/
+form{
+	max-width: 500px;
+	margin: 30px auto;
+}
+
+input,textarea {width: 100%;
+                box-sizing: border-box;
+                border: solid 1px #aaaaaa;
+                border-radius: 0;
+                -webkit-appearance: none;
+}
+
+textarea {height: 110px}
+
+input[type="submit"]{
+	width: 200px;
+	background-color: #cef178
+}
+
+/*======pc用の設定=======-==--=*/
+@media only screen and (min-width:900px) {
+	
+/*三段組み*/
+article div[itemprop="articleBody"]
+{
+	display: -webkit-box
+}
+
+article section
+{
+	width: 288px;
+	margin-right: 18px;
+	box-sizing: border-box
+}
+
+article section h1
+{
+	height: 48px;
+    line-height: 1.2
+}
+
+article section:nth-of-type(1n) figure
+{
+	float: none;
+    margin: 0
+}
+
+article section:nth-of-type(1n) figcaption
+{
+	text-align: center;
+    margin-bottom: 15px
+}
+}
+/*======タブレット用の設定=======-==--=*/
+@media only screen and (min-width: 600px) and (max-width: 899px){
+
+   div#container{
+	   width: 100%;
+	   box-sizing: border-box;
+	   padding: 0 10px;
+	   background-position: -3px 380px, 100px 460px
+}
+
+header#pageheader img {width: 100%;
+                       height: auto}
+
+nav ul {font-size: 10px}
+
+nav ul li a {
+	width: 100px;
+}
+
+}
+
+/*======スマートフォン用の設定=======-==--=*/
+@media only screen and (max-width: 599px){
+
+   div#container{
+	   width: 100%;
+	   box-sizing: border-box;
+	   padding: 0 10px;
+	   background-position: -3px 220px, 100px 280px
+}
+
+header#pageheader img {width: 100%;
+                       height: auto}
+
+nav ul {font-size: 8px}
+
+nav ul li a
+{
+	width: auto;
+	display: inline-block;
+	padding: 0 3px}
+
+
+header#pageheader h1{
+	font-size: 24px;
+	margin-right: 15px}
+
+header#pageheader h2{
+	font-size: 10px;
+	text-align: left;
+	padding: 0;
+}
+
+article header h1{
+	float: none
+}
+article header p {margin: 0}
+
+article section:nth-of-type(1n) figure
+                       {float: none;
+                        margin: 0;
+                        text-align: center;
+                        display: block}
+
+article section:nth-of-type(1n) figcaption
+                       {text-align: center;
+                        margin-bottom: 15px}
+}
 
 </style>
+
 </head>
 <body>
 
@@ -99,35 +347,42 @@ small	{font-size: 0.75em;
 <div id="container">
 
 <!-- ヘッダー -->
-<div id="header">
-<h1><img src="logo.gif" alt="Green Leaf" /></h1>
-<p>生活を楽しくする情報をもっと身近にお届けします</p>
-</div>
+<header id="pageheader">
+<h1>Green Leaf</h1>
+<h2>生活を楽しくする情報をもっと身近にお届けします</h2>
+
 
 <!-- メニュー -->
-<ul id="menu">
-<li><a href="index.html">トップ</a></li>
-<li><a href="about.html">森の工房について</a></li>
-<li><a href="event.html">季節のイベント</a></li>
-<li><a href="contact.html">お問い合わせ</a></li>
-<li><a href="http://blog.xxx.xxx/">ブログ</a></li>
-</ul>
+<nav>
+	<ul>
+	<li><a href="index.html">トップ</a></li>
+	<li><a href="about.html">森の工房について</a></li>
+	<li><a href="event.html">季節のイベント</a></li>
+	<li><a href="contact.html">お問い合わせ</a></li>
+	<li><a href="http://blog.xxx.xxx/">ブログ</a></li>
+	</ul>
+</nav>
+
+<img src="header.jpg" height="300" width="900" alt="">
+
+</header>
 
 <!-- コンテンツ -->
-<div id="content">
-<h2>お問い合わせ</h2>
-
-<p id="summary">ご意見、ご感想などがありましたら、以下の欄にご記入の上、送信してください。また、森の工房やイベントに関するご質問などもお気軽にお寄せください。<br />
-（※送信後はトップページに戻ります。）</p>
-
+<article>
+<header>
+	<h1>お問い合わせ</h1>
+	
+	<p id="summary">ご意見、ご感想などがありましたら、以下の欄にご記入の上、送信してください。また、森の工房やイベントに関するご質問などもお気軽にお寄せください。<br />
+	（※送信後はトップページに戻ります。）</p>
+</header>
 <form action="https://www.rescuesolutions.net/form/mail.cgi" method="POST">
 <input type="hidden" name="_uid" value="XXXXXXXX" />
 <input type="hidden" name="_done" value="http://www.www.www/" />
 <input type="hidden" name="_subject" value="FORM MAIL" />
 
-<p>名前：<br />
-<input type="text" name="namae" size="40" />
-</p>
+<p><label>名前：<br>
+<input type="text" name="namae" size="40">
+</label></p>
 
 <p>メールアドレス：<br />
 <input type="text" name="mail" size="40" />
@@ -139,20 +394,19 @@ small	{font-size: 0.75em;
 
 <p id="button">
 <input type="submit" value="送信" />
-<input type="reset" value="リセット" />
 </p>
 
 </form>
 
-</div>
+</article>
 
 <!-- フッター -->
-<div id="footer">
+<footer>
 <small>
 Powered by <a href="http://www.rescue.ne.jp/">CGI RESCUE</a><sup>&reg;</sup> ／
 Copyright (C) <a href="mailto:forest@web.mail">Forest Studio</a>
 </small>
-</div>
+</footer>
 
 </div>
 
