--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>森の工房 [Forest Studio] - お問い合わせ</title>
+<title>森の工房 [Forest Studio] - 川の中の風景</title>
 <meta name="viewport" content="width=device-width">
 
 <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
@@ -215,40 +215,9 @@ article section:nth-of-type(odd) figcaption{
 	text-align: right;
 }
 
-/*フォーム*/
-form{
-	max-width: 500px;
-	margin: 30px auto;
-}
-
-input,textarea {width: 100%;
-                box-sizing: border-box;
-                border: solid 1px #aaaaaa;
-                border-radius: 0;
-                -webkit-appearance: none;
-}
-
-textarea {height: 110px}
-
-input[type="submit"]{
-	width: 200px;
-	background-color: #cef178
-}
-
-input:required, input:invalid
- {
-	background-image: url(caution.png);
-	background-repeat: no-repeat;
-	background-position: right center;
-}
-
-input:valid {
-	background-image: none;
-}
-label span {
-	color: #ff0000;
-}
-
+/*ビデオ*/
+article {text-align: center;
+          margin: 30px 0 100px}
 /*======pc用の設定=======-==--=*/
 @media only screen and (min-width:900px) {
 	
@@ -295,13 +264,14 @@ article section:nth-of-type(1n) figcaption
 
 header#pageheader img {width: 100%;
                        height: auto}
-
 nav ul {font-size: 10px}
 
 nav ul li a {
 	width: 100px;
 }
-
+video {width: 480px;
+       height: 270px
+       }
 }
 
 /*======スマートフォン用の設定=======-==--=*/
@@ -350,8 +320,9 @@ article section:nth-of-type(1n) figure
 article section:nth-of-type(1n) figcaption
                        {text-align: center;
                         margin-bottom: 15px}
+video {width: 280px;
+       height: 157px}
 }
-
 </style>
 
 </head>
@@ -373,7 +344,7 @@ article section:nth-of-type(1n) figcaption
 	<li><a href="about.html">森の工房について</a></li>
 	<li><a href="event.html">季節のイベント</a></li>
 	<li><a href="contact.html">お問い合わせ</a></li>
-	<li><a href="video.html">川の中の風景</a></li>
+	<li><a href="http://blog.xxx.xxx/">ブログ</a></li>
 	</ul>
 </nav>
 
@@ -383,45 +354,11 @@ article section:nth-of-type(1n) figcaption
 
 <!-- コンテンツ -->
 <article>
-<header>
-	<h1>お問い合わせ</h1>
-	
-	<p id="summary">ご意見、ご感想などがありましたら、以下の欄にご記入の上、送信してください。また、森の工房やイベントに関するご質問などもお気軽にお寄せください。<br />
-	（※送信後はトップページに戻ります。）</p>
-</header>
-<form action="https://www.rescuesolutions.net/form/mail.cgi" method="POST">
-<input type="hidden" name="_uid" value="XXXXXXXX" />
-<input type="hidden" name="_done" value="http://www.www.www/" />
-<input type="hidden" name="_subject" value="FORM MAIL" />
+  <h1>川の中の風景</h1>
 
-<p><label>名前<span>(必須）</span>:<br>
-<input type="text" name="namae" size="40" required placeholder="名前を入力して下さい" autofocus>
-</label></p>
-
-<p><label>メールアドレス<span>(必須）</span>:<br>
-<input type="email" name="mail" size="40" required
-placeholder="メールアドレスを入力して下さい">
-</label></p>
-
-<p>
-<label>URL:<br>
-<input type="url" name="url" size="40"
-placeholder="ホームページのURLを入力して下さい">
-</label>
-</p>
-
-<p><label>コメント：<br>
-<textarea name="comment" cols="50" rows="8"
-placeholder="コメントなどを入力して下さい">
-</textarea>
-</label></p>
-
-<p id="button">
-<input type="submit" value="送信" />
-</p>
-
-</form>
-
+  <video width="640" height="360" controls>
+    <source src="sample.mp4" type="video/mp4">
+  </video>
 </article>
 
 <!-- フッター -->
