ポスターフレームを追加

--- a/video.html
+++ b/video.html
@@ -356,7 +356,8 @@ video {width: 280px;
 <article>
   <h1>川の中の風景</h1>
 
-  <video width="640" height="360" controls>
+  <video width="640" height="360" controls
+  poster="video.jpg">
     <source src="sample.mp4" type="video/mp4">
   </video>
 </article>
